Add stats
